# BERThoven

./: .gitignore  CMakeLists.txt  LICENSE  README.md
python/src/: berthoven.py  draw_data.py  vocabulary_parse.py
python/src/resources/data/: notes  notes_no_octave  notes_no_octave_no_chords
python/src/resources/neural_network/evaluation_models_dumps/: a_e20_n10000_i100_lr1e-05_bs16_os1_s0_dump.csv  a_e20_n10000_i100_lr1e-06_bs16_os0_s0_dump.csv  a_e20_n10000_i100_lr1e-06_bs16_os0_s1_dump.csv  a_e20_n10000_i100_lr1e-06_bs16_os1_s0_dump.csv  a_e20_n10000_i100_lr1e-06_bs16_os1_s1_dump.csv  a_e20_n10000_i100_lr1e-06_bs32_os1_s0_dump.csv  a_e20_n10000_i100_lr1e-06_bs8_os1_s0_dump.csv  a_e20_n10000_i100_lr2e-06_bs16_os1_s0_dump.csv  a_e20_n10000_i100_lr5e-05_bs16_os1_s0_dump.csv  a_e20_n10000_i100_lr5e-06_bs16_os1_s0_dump.csv  a_e20_n1000_i100_lr1e-06_bs16_os1_s0_dump.csv  a_e20_n100_i100_lr1e-06_bs16_os1_s0_dump.csv  a_e20_n5000_i100_lr1e-06_bs16_os1_s0_dump.csv  train_e20_10000_1e6_teacc801.csv
python/src/resources/neural_network/models/: berthoven_model_v1_e100_teacc865.pt  berthoven_model_v2_nocommas_e20_teacc440.pt
python/src/resources/neural_network/training_data/: train_dump_berthoven_i100_e20_balanced_no_chords_teacc888.csv  train_dump_berthoven_i100_e27_balanced_no_chords_shuffled_teacc701.csv
src/: BerthovenModel.cpp  BerthovenModel.h  DragAndDropSource.cpp  DragAndDropSource.h  DragAndDropTargetComponent.cpp  DragAndDropTargetComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  test_nn.cpp
src/resources/: FINAL_BERTHOVEN_MODEL.pt  berthoven_i100_e20_balanced_no_chords_teacc888.pt  notes_no_octave.txt
